# esl.soln

./: .gitignore  LICENSE  README.md  main.tex
chapters/: ch2.tex
code/: bayes.py  ch2.py  digits.py  pyproject.toml
notes/: main.tex
notes/chapters/: ch2.tex
