[tool.poetry]
name = "esl"
version = "0.1.0"
description = ""
authors = ["sebastian <sebastian@datavant.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.3"
seaborn = "^0.13.2"
matplotlib = "^3.9.2"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"

[tool.pyright]
exclude = [ ".venv" ]
venvPath = "."
venv = ".venv"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
